# CS_Multi_Model_Trading_System

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  Readme.md  advanced_labeling.py  backtest.py  bear_market_analysis.py  config.py  cross_asset_features.py  data_loader.py  diagnostics.py  execution.py  factor_attribution.py  features.py  fmp_data_provider.py  fmp_earnings_quality.py  fmp_features.py  fmp_pit_premium.py  fundamental_features.py  garch_vol.py  generate_presentation.py  hmm_regime.py  insider_features.py  interaction_features.py  look_back_analyzer.py  main.py  model.py  model_comparison.py  openbb_features.py  optuna_tuner.py  portfolio.py  prediction_tracker.py  pyproject.toml  requirements-dev.txt  requirements-training.txt  requirements.txt  retrain.py  risk_model.py  (+4 more)
alpaca_adapter/: __init__.py  provider.py
data/: cross_asset.csv  earnings_dates.json  sectors.json  sp500_pit_constituents.json
models/: crossmamba_model.py  latest_crossmamba_model.pkl  latest_lightgbm_model.pkl  latest_model.pkl  latest_tst_model.pkl  tst_model.py
results/: Multi_Model_Trading_System_Presentation.key  Multi_Model_Trading_System_Presentation.pptx  backtest_returns.csv  backtest_summary.json  comparison_table.csv  comparison_table_14L_7S.csv  feature_importance.csv  latest_signals.csv  model_comparison.json  model_comparison_14L_7S.json  optuna_best_params.json  returns_crossmamba.csv  returns_crossmamba_14L_7S.csv  returns_ensemble.csv  returns_ensemble_14L_7S.csv  returns_lightgbm.csv  returns_lightgbm_14L_7S.csv  returns_lightgbm_40L_40S.csv  (+12 more)
(+20 files in other folders)
