[project]
name = "cs-multi-model-trading-system"
version = "1.0.0"
description = "Cross-sectional multi-model equity ranking and signal-generation system"
readme = "Readme.md"
requires-python = ">=3.11,<3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
    "data",
    "logs",
    "results",
    "*.ipynb",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]
